--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div id="loader">Loading...</div>
     <label for="dateInput">Select Date:</label>
     <input type="date" id="dateInput" />
-    <button onclick="downloadFile()">Generate PDF</button>
+    <button onclick="downloadFile()" type="button">Download Report</button>
 
     <script>
       // Function to download the file
