--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         // URL of the API endpoint serving the file
 
         fetch(`/download?date=${formatDate(selectedDate)}`, {
-          method: 'GET'
+          method: 'POST'
           //   headers: {
           //     'Content-Type': 'application/json'
           //   },
