--- a/index.html
+++ b/index.html
@@ -7,10 +7,25 @@
     <style>
       #loader {
         display: none;
-        background: gray;
-        color: blue;
+        background: rgb(175, 175, 175);
+        color: green;
         height: 100vh;
         width: 100vh;
+        align-items: center;
+        justify-content: center;
+      }
+      table {
+        border-collapse: collapse;
+        width: 100%;
+      }
+      th,
+      td {
+        border: 1px solid #dddddd;
+        text-align: left;
+        padding: 8px;
+      }
+      th {
+        background-color: #f2f2f2;
       }
     </style>
   </head>
@@ -18,9 +33,13 @@
     <div id="loader">Loading...</div>
     <label for="dateInput">Select Date:</label>
     <input type="date" id="dateInput" />
-    <button onclick="downloadFile()" type="button">Download Report</button>
+    <!-- <button onclick="downloadFile()" type="button">Download Report</button> -->
+    <button onclick="showData()" type="button">Show</button>
 
-    <script>
+    <h3>CSV Data for <span id="date"></span></h3>
+    <div id="table-container"></div>
+
+    <!-- <script>
       // Function to download the file
       function downloadFile() {
         document.getElementById('loader').style.display = 'block';
@@ -75,6 +94,52 @@
             document.getElementById('loader').style.display = 'none';
             console.error('There was a problem with the fetch operation:', error);
           });
+      }
+    </script> -->
+
+    <script>
+      function showData() {
+        document.getElementById('loader').style.display = 'flex';
+        function formatDate(dateString) {
+          const [year, month, day] = dateString.split('-');
+          return `${day}/${month}/${year}`;
+        }
+        const selectedDate = document.getElementById('dateInput').value;
+        const formattedDate = formatDate(selectedDate);
+        fetch(`/data?date=${formattedDate}`)
+          .then(response => response.json())
+          .then(data => {
+            const tableContainer = document.getElementById('table-container');
+            const table = document.createElement('table');
+            const thead = document.createElement('thead');
+            const tbody = document.createElement('tbody');
+
+            const headers = Object.keys(data[0]);
+            const headerRow = document.createElement('tr');
+            headers.forEach(headerText => {
+              const th = document.createElement('th');
+              th.textContent = headerText;
+              headerRow.appendChild(th);
+            });
+            thead.appendChild(headerRow);
+
+            data.forEach(rowData => {
+              const row = document.createElement('tr');
+              headers.forEach(headerText => {
+                const cell = document.createElement('td');
+                cell.textContent = rowData[headerText];
+                row.appendChild(cell);
+              });
+              tbody.appendChild(row);
+            });
+
+            table.appendChild(thead);
+            table.appendChild(tbody);
+            tableContainer.appendChild(table);
+            document.getElementById('date').innerText = formattedDate;
+            document.getElementById('loader').style.display = 'none';
+          })
+          .catch(error => console.error('Error fetching data:', error));
       }
     </script>
   </body>
